--- a/responsive.css
+++ b/responsive.css
@@ -1,9 +1,7 @@
 @media only screen and (min-width:200px) and (max-width: 576px){
-    body{
-        margin: 0 auto;
-    }
     .nav-section{
         flex-direction: column;
+        text-align: center;
         gap: 10px;
         padding: 5px;
     }
@@ -16,6 +14,7 @@
         display: flex;
         flex-direction: column;
         padding: 5px 0;
+        margin: 100px 0 0 0;
     }
     .profile-section{
         padding: 0 5px;
@@ -25,10 +24,10 @@
         padding-top: 90px;
     }
     .desc-section h1{
-        font-size: 19px;
+        font-size: 20px;
     }
     .desc-section p{
-        font-size: 15px;
+        font-size: 17px;
     }
     .round-picture{
         width: 90%;
