--- a/responsive.css
+++ b/responsive.css
@@ -14,6 +14,9 @@
         flex-direction: column;
         text-align: center;
     }
+    .nav-list{
+        gap: 1rem;
+    }
     .status{
         margin-top: 50px;
         text-align: center;
